--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "classnames": "^2.2.5",
     "concurrently": "^3.1.0",
     "express": "^4.14.0",
-    "next": "^1.1.1"
+    "next": "^1.1.1",
+    "react-fontawesome": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
