trying to set up now hosting

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "hypothesize",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "concurrent --kill-others \"npm run client-dev\" \"npm run api-dev\"",
+    "start": "concurrently --kill-others \"npm run client-dev\" \"npm run api-dev\"",
     "client-dev": "better-npm-run client-dev",
-    "api-dev": "better-npm-run api-dev"
+    "api-dev": "better-npm-run api-dev",
+    "now-start": "concurrently --kill-others \"npm run client-prod\" \"npm run api-prod\""
   },
   "betterScripts": {
     "client-dev": {
@@ -15,6 +15,12 @@
         "NODE_ENV": "development"
       }
     },
+    "client-prod": {
+        "command": "next start",
+        "env": {
+            "NODE_ENV": "production"
+        }
+    },
     "api-dev": {
       "command": "nodemon api/index.js --debug --watch ./api",
       "env": {
@@ -22,6 +28,14 @@
         "NODE_ENV": "development",
         "PORT": 1984
       }
+    },
+    "api-prod": {
+        "command": "node api/index.js",
+        "env": {
+            "NODE_PATH": "./api",
+            "NODE_ENV": "production",
+            "PORT": 1984
+        }
     }
   },
   "author": "Matthew Frey <matthewfrey118@gmail.com>",
@@ -37,7 +51,7 @@
     "classnames": "^2.2.5",
     "concurrently": "^3.1.0",
     "express": "^4.14.0",
-    "next": "^1.1.1",
+    "next": "https://github.com/mmmeff/next.js.git",
     "react-fontawesome": "^1.3.1"
   },
   "devDependencies": {
